Stop exposing user id from auth.
Deduce user id from auth token using Spring Authention where necessary.